--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
-# docker-compose.yml
-
-version: '3.8'
 services:
-  postgres:
-    image: postgres:13.5
+  db:
+    image: postgres
     restart: always
     environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-    volumes:
-      - postgres:/var/lib/postgresql/data
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: secretnote
     ports:
       - '5432:5432'
-volumes:
-  postgres:
+  api:
+    build: .
+    environment:
+      DATABASE_URL: postgres://username:password@db:5432/secretnote
+    ports:
+      - '3000:3000'
+    depends_on:
+      - db
+    volumes:
+      - .:/app
+      - /app/node_modules
+    command: npm run start:dev
